--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -1,2 +1,4 @@
 <%= javascript_packs_with_chunks_tag 'login', 'application' %>
 <%= stylesheet_packs_with_chunks_tag 'login', 'application' %>
+
+<div id="params" data-params="<%= @data %>"></div>
